add a few more elements

--- a/HTML/elements.html
+++ b/HTML/elements.html
@@ -22,6 +22,13 @@
     <p><em>Emphasis.</em></p>
     <p><strong>Strong.</strong></p>
 
+    <!-- There are subscript and superscript elements available for math and science value representation. -->
+    <p>H<sub>2</sub>O</p>
+    <p>2<sup>2</sup> = 4</p>
+
+    <!-- If you want to edit an inline item use the span element to wrap the item -->
+    <p>Small. <span style="font-size: 24px;">Big.</span></p>
+
     <!-- Quotation marks in HTML -->
     <p><q>This is a quote.</q></p>
 
@@ -63,5 +70,12 @@
         <td>68</td>
       </tr>
     </table>
+
+    <!-- The Break element can be used to create space between two elements, or you can use an empty Paragraph element as well and style it to your desire. -->
+    <br />
+    <p></p>
+
+    <!-- The Image element is self-contained and should almost always comes with an alt tag -->
+    <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Example picture" style="width: 40%;" />
   </body>
 </html>
