rename class for content, resize img in elements file

--- a/HTML/classes-and-IDs.html
+++ b/HTML/classes-and-IDs.html
@@ -28,7 +28,7 @@
         height: 3rem;
       }
 
-      .body {
+      .content {
         font-size: 16px;
         margin: 0 5rem;
         padding: 1rem 5rem;
@@ -51,7 +51,7 @@
   <body>
     <div class="header"><h2>Header</h2></div>
     <p></p>
-    <div class="body">
+    <div class="content">
       <p id="first-paragraph">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
         dolores! Eveniet sint blanditiis dignissimos ipsam pariatur culpa itaque
