--- a/HTML/elements.html
+++ b/HTML/elements.html
@@ -76,7 +76,7 @@
     <p></p>
 
     <!-- The Image element is self-contained and should almost always comes with an alt tag -->
-    <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Example picture" style="width: 40%;" />
+    <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Example picture" style="width: 560px;" />
   
     <p></p>
     <!-- The iframe (Inline Frame) element allows you to embed other HTML page into the current one.-->
