--- a/HTML/1-22/external-css.html
+++ b/HTML/1-22/external-css.html
@@ -16,7 +16,7 @@
     <title>Working with CSS</title>
   </head>
   <body>
-    <div class="header"><h1>Styled Header</h1></div>
+    <div class="header"><h1>Header</h1></div>
     <div class="content">
       <p>
         <span class="first-letter">W</span>hen styling websites, a popular unit
@@ -34,14 +34,12 @@
       <p>You may also use other values or even percentages:</p>
       <div class="other-pixel-examples">
         <p>100%</p>
-        <hr class="hundred-percent">
+        <hr class="hundred-percent" />
         <p>12 inches</p>
-        <hr class="twelve-inches">
+        <hr class="twelve-inches" />
         <p>3 "rem"</p>
-        <hr class="three-rem">
+        <hr class="three-rem" />
       </div>
-
-
     </div>
     <div class="footer"><p>...</p></div>
   </body>
