change value for inches

--- a/HTML/1-22/external-css.html
+++ b/HTML/1-22/external-css.html
@@ -35,8 +35,8 @@
       <div class="other-pixel-examples">
         <p>100%</p>
         <hr class="hundred-percent" />
-        <p>12 inches</p>
-        <hr class="twelve-inches" />
+        <p>6 inches</p>
+        <hr class="six-inches" />
         <p>3 "rem"</p>
         <hr class="three-rem" />
       </div>
