--- a/1-29/index.html
+++ b/1-29/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>My Website</title>
 </head>
 <body>
-  <h1>Test</h1>
+  <div class="header">
+    <h1>Header</h1>
+  </div>
+  <div class="content">
+    <p>text</p>
+  </div>
+  <div class="footer">
+    <h4>footer</h4>
+  </div>
 </body>
 </html>
