add image to content

--- a/1-29/index.html
+++ b/1-29/index.html
@@ -13,6 +13,7 @@
   </div>
   <div class="content">
     <p>text</p>
+    <img src="https://images.pexels.com/photos/574077/pexels-photo-574077.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Example Image" />
   </div>
   <div class="footer">
     <h4>footer</h4>
