--- a/2-5/contact.html
+++ b/2-5/contact.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Raleway" rel="stylesheet"> 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Raleway"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Contact Me</title>
   </head>
@@ -16,8 +19,8 @@
       <a href="./contact.html">Contact Me</a>
     </div>
 
-		<div class="content">
-			<p>Contact me!</p>
+    <div class="content">
+      <p>Contact me!</p>
     </div>
 
     <div class="footer">
