--- a/2-5/index.html
+++ b/2-5/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Raleway" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Raleway"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>My Website</title>
   </head>
