--- a/2-5/contact.html
+++ b/2-5/contact.html
@@ -16,11 +16,14 @@
       <h1>My Name</h1>
       <p></p>
       <a href="./index.html">Home</a>
+      <a href="./about.html">About</a>
       <a href="./contact.html">Contact Me</a>
     </div>
 
     <div class="content">
-      <p>Contact me!</p>
+      <div class="contact-content">
+        <p class="flash">Contact me!</p>
+      </div>
     </div>
 
     <div class="footer">
