--- a/2-5/index.html
+++ b/2-5/index.html
@@ -17,6 +17,7 @@
       <h1>My Name</h1>
       <p></p>
       <a href="./index.html">Home</a>
+      <a href="./about.html">About</a>
       <a href="./contact.html">Contact Me</a>
     </div>
 
