add example for using flexbox, pseudo-classes, and media queries

--- a/3-5/about.html
+++ b/3-5/about.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css" >
+  <title>Contact</title>
 </head>
 <body>
-  
+  <div class="header">
+    <a href="./index.html"><h1>Website</h1></a>
+    <p></p>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./contact.html"">Contact</a></li>
+        <li><a href="./about.html"">About</a></li>
+      </ul>
+  </div>
+  <div class="about-content">  
+    <div class="card">
+      <h2>About</h2>
+      <p>Lorem ipsum, <span><a href="https://google.com">Click</a></span>
+        dolor sit amet consectetur adipisicing elit. In possimus repellendus sequi, reprehenderit officiis deserunt? Est quibusdam consectetur labore, quaerat corporis illo?</p>
+    </div>
+  </div>
+  <div class="footer">
+      <a href="https://youtube.com" class="fa fa-youtube"></a>
+      <a href="https://facebook.com" class="fa fa-facebook"></a>
+      <a href="https://github.com" class="fa fa-github"></a>
+    </div>
 </body>
 </html>
