--- a/3-5/index.html
+++ b/3-5/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css" >
   <title>Home</title>
 </head>
 <body>
-  
+  <div class="header">
+    <a href="./index.html"><h1>Website</h1></a>
+    <p></p>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./contact.html"">Contact</a></li>
+        <li><a href="./about.html"">About</a></li>
+      </ul>
+  </div>
+  <div class="home-content">
+    <div class="card">
+      <h2>Title</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellat incidunt fuga eaque accusamus pariatur optio facere repellendus ducimus esse at ipsa aliquid adipisci magnam neque, ad dignissimos! Fuga, quaerat.</p>
+    </div>
+    <p></p>
+    <div class="card">
+      <h2>Title Two</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto reprehenderit reiciendis aliquid fugit, natus incidunt! Alias nesciunt totam repellendus architecto tempora repellat. Sint cupiditate provident laboriosam illum, aliquam quo placeat incidunt necessitatibus praesentium, magnam explicabo!</p>
+    </div>
+  </div>
+  <div class="footer">
+    <a href="https://youtube.com" class="fa fa-youtube"></a>
+    <a href="https://facebook.com" class="fa fa-facebook"></a>
+    <a href="https://github.com" class="fa fa-github"></a>
+  </div>
 </body>
 </html>
