--- a/3-19/contact.html
+++ b/3-19/contact.html
@@ -5,29 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link
-      href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Quicksand"
-      rel="stylesheet"
-    />
   <link rel="stylesheet" href="styles.css" >
   <title>Contact</title>
 </head>
 <body>
   <div class="header">
     <a href="./index.html"><h1>Website</h1></a>
-    <p></p>
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./contact.html"">Contact</a></li>
-        <li><a href="./about.html"">About</a></li>
+        <li><a href="./introToJavaScript.html">Javascript</a></li>
       </ul>
   </div>
-  <div class="about-content">  
-    <div class="card">
-      <h2>About</h2>
-      <p>Lorem ipsum, <span><a href="https://google.com">Click</a></span>
-        dolor sit amet consectetur adipisicing elit. In possimus repellendus sequi, reprehenderit officiis deserunt? Est quibusdam consectetur labore, quaerat corporis illo?</p>
-    </div>
+  <div class="form-content">
+    <h2>Message me!</h2>
+    <form>
+      <input type="text" placeholder="name" />
+      <p></p>
+      <input type="email" placeholder="email" />
+      <p></p>
+      <input type="text" placeholder="Enter message..." />
+      <p></p>
+      <input type="submit" value="Submit" >
+    </form>
   </div>
   <div class="footer">
       <a href="https://youtube.com" class="fa fa-youtube"></a>
