--- a/3-19/index.html
+++ b/3-19/index.html
@@ -5,21 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link
-      href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Quicksand"
-      rel="stylesheet"
-    />
   <link rel="stylesheet" href="styles.css" >
   <title>Home</title>
 </head>
 <body>
   <div class="header">
     <a href="./index.html"><h1>Website</h1></a>
-    <p></p>
       <ul>
-        <li><strong><a href="./index.html">Home</a></strong></li>
-        <li><strong><a href="./contact.html"">Contact</a></strong></li>
-        <li><strong><a href="./about.html"">About</a></strong></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./contact.html"">Contact</a></li>
+        <li><a href="./introToJavaScript.html">Javascript</a></li>
       </ul>
   </div>
   <div class="home-content">
