add console examples

--- a/3-19/introToJavaScript.html
+++ b/3-19/introToJavaScript.html
@@ -70,6 +70,14 @@
       document.getElementById("example-text").innerHTML = "Javascript";
     }
 
+    // Another useful feature for testing your JavaScript code is the Console object.
+    console.log("This is a message in your console");
+    const a = 2;
+    const b = 0;
+    const c = 512;
+    console.log(a/b);
+    console.log(a*c);
+    console.log(ourParagraphElement);
   </script>
 </body>
 </html>
