add example of string concatenation

--- a/3-19/introToJavaScript.html
+++ b/3-19/introToJavaScript.html
@@ -68,12 +68,16 @@
 
       // Another useful feature for testing your JavaScript code is the Console object.
       console.log('This is a message in your console');
+      
       const a = 2;
       const b = 0;
       const c = 512;
       console.log(a / b);
       console.log(a * c);
-      console.log(ourParagraphElement);
+
+      const one = "Hello ";
+      const two = "World";
+      console.log(one + two);
 
       // We can create our own objects and use them in a similar way we've used other objects so far.
       const square = {
