reorganize js examples, add more styling

--- a/3-19/introToJavaScript.html
+++ b/3-19/introToJavaScript.html
@@ -45,6 +45,22 @@
       const PI = 3.14159;
       let javascriptIsNeat = true;
 
+      // Another useful feature for testing your JavaScript code is the Console object.
+      console.log('This is a message in your console');
+      
+      const a = 2;
+      const b = 0;
+      const c = 512;
+      console.log(a / b);
+      console.log(a * c);
+
+      const one = "Hello ";
+      const two = "World";
+      console.log(one + two);
+      console.log(a + PI);
+
+      console.log("Is JavaScript neat? " + javascriptIsNeat)
+
       // These variables can be used in your program repeatedly to get a lot of cool results.
       // There are several types of data that variables can contain, but the main we will focus on are:
       /*
@@ -65,19 +81,6 @@
       ourParagraphElement.style.color = 'red';
       ourParagraphElement.style.fontSize = '24px';
       ourParagraphElement.style.padding = '16px';
-
-      // Another useful feature for testing your JavaScript code is the Console object.
-      console.log('This is a message in your console');
-      
-      const a = 2;
-      const b = 0;
-      const c = 512;
-      console.log(a / b);
-      console.log(a * c);
-
-      const one = "Hello ";
-      const two = "World";
-      console.log(one + two);
 
       // We can create our own objects and use them in a similar way we've used other objects so far.
       const square = {
